--- a/references.bib
+++ b/references.bib
@@ -97,10 +97,10 @@
       author={ Lloyd S. },
       year={1957},
 }
-@book{dbscan,
+@book{dbscan_book,
       title={Density-Based Clustering in Spatial Databases: The Algorithm GDBSCAN and Its Applications},
-      author={Martin Ester, Hans-Peter Kriegel, Jörg Sander, Xiaowei Xu},
-      year={1998},
+      author={Martin Ester, Hans-Peter Kriegel},
+      year={1998}
 }
 @inbook{gan,
       title={What to expect of artificial intelligence in 2017},
