--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -25,7 +25,7 @@
     \par К моделям обучаеммым данным методом можно отнести:
     \begin{itemize}
         \item KMeans\cite{kmeans}
-        \item DBSCAN\cite{dbscan}
+        \item DBSCAN\cite{dbscan_book}
         \item GAN\cite{gan}
         \item LLM\cite{llm}
         \item Diffusion models\cite{song2021scorebasedgenerativemodelingstochastic}
