[FIX] lexic errors

--- a/document.tex
+++ b/document.tex
@@ -45,7 +45,7 @@
 % \newacronym{ssp}{SSP}{\hyperref[sec::root_ssp]{Split-Step Pad\'e}}
 % \newacronym{sel}{SEL}{\hyperref[sec::SEL]{Sound Exposure Level}}
 % \newacronym{mpe}{МПУ}{Модовое Параболическое Уравнение}
-\newglossaryentry{dino}{name=DINO, description = (Distillation with No Labels)}
+\newacronym{dino}{DINO}{Distillation with No Labels}
 \newacronym{ml}{ML}{Machine Learning}
 \newacronym{nn}{NN}{Neural Network}
 \newacronym{nlp}{NLP}{Natural Language Processing}
