--- a/subfiles/introduction.tex
+++ b/subfiles/introduction.tex
@@ -5,7 +5,7 @@
     \par В современной разработке программного обеспечения исходный код является ключевым ресурсом, требующим эффективного анализа и обработки. С ростом сложности программных систем и увеличением объёмов кодовой базы традиционные методы анализа кода сталкиваются с рядом ограничений, связанных с масштабируемостью и точностью. В таких задачах, как автоматическое обнаружение уязвимостей, рефакторинг, поиск семантически схожих фрагментов кода и предсказание дефектов, критически важным становится наличие качественного признакового представления исходного кода, которое могло бы быть использовано в downstream-моделях машинного обучения.
     \par По мере роста объемов разработки ПО и старения кодовой базы корпоративных приложений, повышение продуктивности разработки и модернизация устаревших систем становятся критически важными задачами. Достижения в области глубокого обучения и машинного обучения уже привели к прорывам в компьютерном зрении, распознавании речи, обработке естественного языка и других областях, что вдохновило исследователей применять методы ИИ для повышения эффективности разработки программного обеспечения. Это способствовало стремительному развитию нового направления исследований - "ИИ для программирования". 
     \par Таким образом целью является адаптация алгоритма \gls{dino}\cite{caron2021emergingpropertiesselfsupervisedvision, oquab2024dinov2learningrobustvisual, darcet2024visiontransformersneedregisters} для извлечения признаковых представлений исходного кода и сравнительный анализ его эффективности с готовыми моделями (CodeBERT\cite{feng2020codebertpretrainedmodelprogramming}, UnixCoder\cite{guo2022unixcoder}) на downstream-задачах, таких как классификация кода.
-    \par Для достежения поставленной цели необходимо выполнить следующие задачи.
+    \par Для достижения поставленной цели необходимо выполнить следующие задачи.
     \begin{enumerate}
         \item Провести обзор современных методов представления исходного кода и алгоритмов самообучения (self-supervised learning).
         \item Модифицировать алгоритм \gls{dino} для работы с текстовыми данными.
