--- a/subfiles/part_1/dino.tex
+++ b/subfiles/part_1/dino.tex
@@ -2,10 +2,10 @@
 
 \begin{document}
     \subsubsection{DINO}
-    \par Задача \acrshort{mlm}, не смотря на свою эффективность в предобучении языковых моделей, не обеспечивает понимания текста в силу локального характера оптимизации, где модель пресдказывает токены, не требуюя анализа глобальных связей. Так же модель может правильно угадывать слово не понимая смысла текста.
-    \par В последнее время большую популрность получил метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision, oquab2024dinov2learningrobustvisual, darcet2024visiontransformersneedregisters} разработанный FacebookResearch. Это современный алгоритм самообучения, который позволяет эффективно извлекат универсальные признаки из изображений без использования размеченных данных. 
-    \par Ключевая идея \acrshort{dino} -- принцип самодистеляции, где модель учится согласовывать представления одного изобажения после различных аугментаций , формируя устойчевые и информативные представления. 
-    \par Для обучения используется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. Во время обучения изменяются исключительно параметры ученика, тогда как веса модели учителя вычисляется как экспоненциально взвешенное среднее весов ученика на каждой итерации, обеспечивая стабильное самообучение на неразмеченных данных.
+    \par Задача \acrshort{mlm}, несмотря на свою эффективность в предобучении языковых моделей, не обеспечивает понимания текста в силу локального характера оптимизации, где модель предсказывает токены, не требуя анализа глобальных связей. Так же модель может правильно угадывать слово не понимая смысла текста.
+    \par В последнее время большую популярность получил метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision, oquab2024dinov2learningrobustvisual, darcet2024visiontransformersneedregisters}, разработанный FacebookResearch. Это современный алгоритм самообучения, который позволяет эффективно извлекать универсальные признаки из изображений без использования размеченных данных. 
+    \par Ключевая идея \acrshort{dino} -- принцип самодистеляции, где модель учится согласовывать представления одного изображения после различных аугментаций, формируя устойчивые и информативные представления. 
+    \par Для обучения используется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. Во время обучения изменяются исключительно параметры ученика, тогда как веса модели учителя вычисляются как экспоненциально взвешенное среднее весов ученика на каждой итерации, обеспечивая стабильное самообучение на неразмеченных данных.
     \begin{figure*}[h]
         \begin{subfigure}{0.33\textwidth}
             \includegraphics[width=\linewidth]{orig_image.png}
@@ -23,7 +23,7 @@
         \end{subfigure}%
         \label{fig:multicrop_augment}
     \end{figure*}
-    \par Для того чтобы избежать предсказания константы в \acrshort{dino} применяют центрирование. Из предсказания модели учителя вычитается скользящее среднее прыдудщих предсказаний модели учителя. Центрирование смещает выход учителя так, чтобы их среднее значение было близко к нулю, это раздвигает кластеры в пространстве признаков.
+    \par Для того, чтобы избежать предсказания константы в \acrshort{dino} применяют центрирование. Из предсказания модели учителя вычитается скользящее среднее предыудщих предсказаний модели учителя. Центрирование смещает выход учителя так, чтобы среднее значение элементов вектора было близко к нулю, это раздвигает кластеры в пространстве признаков.
     \par Также в loss функции используется техника заострения(Sharpening), которая делает выходное вероятностное распределение более пиковым, уменьшая энтропию и подчеркивая наиболее вероятные классы
     \begin{equation}
         \label{sharpening}
@@ -59,7 +59,7 @@
     \end{figure}
 
     \par Это помогает избежать тривиальных решений, когда модель вырождается  и предсказывает равномерное распределение для всех входов.
-    \par В алгоритме \acrshort{dino} функцией потерь являетсяс кросс энтропия -- функция потерь измеряющая расстояние между двумя распределениями вероятностей.
+    \par В алгоритме \acrshort{dino} функцией потерь является кросс энтропия -- функция потерь, измеряющая расстояние между двумя распределениями вероятностей.
     \begin{equation}
         \label{cross_entropy}
         Loss = -P_t(x) \log P_s(x)\,.
