--- a/subfiles/part_1/study_with_teacher.tex
+++ b/subfiles/part_1/study_with_teacher.tex
@@ -16,7 +16,7 @@
         \item \textit{Зависимость от качества входных данных} -- эффективность модели напрямую определяется качеством размеченных данных, процесс создания которых требует значительных временных и трудозатрат. Для сложных задач объём требуемых данных может возрастать экспоненциально, что создаёт существенные практические ограничения.
         \item \textit{Проблема переобучения} -- существует риск избыточной подгонки модели под особенности обучающей выборки -- в таком случае алгоритм начинает воспроизводить не только значимые закономерности, но и случайные шумы, что резко снижает его способность к обобщению на новых данных.
     \end{itemize}
-    \par К моделям обучаеммым данным методом можно отнести:
+    \par К моделям, обучаемым данным методом, можно отнести такие как:
     \begin{itemize}
         \item Линейная регрессия\cite{linearregression}
         \item Дерево решений\cite{dessisiontree}
