--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -3,26 +3,26 @@
 \begin{document}
 \subsubsection{Обучение без учителя} 
     \label{sec:without_teacher}
-    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых известны только входные данные. В таких задачах, как правило, отсутствует верное решение, а качество результата оценивается исключительно с помощью специально разработанных метрик.
+    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах, для которых известны только входные данные. В таких задачах, как правило, отсутствует верное решение, а качество результата оценивается исключительно с помощью специально разработанных метрик.
     \par Задачи обучения без учителя включают в себя:
     \begin{itemize}
-        \item \textit{Кластеризацию} -- задача разделения набора данных на однородные группы таким образом, чтобы объекты внутри одного кластера были максимально схожи между собой, а объекты из разных клстеров -- максимально различны.
-        \item \textit{Снижение размерности} -- задача уменьшение объема данных, за счет выделения ключевой информации.
+        \item \textit{Кластеризацию} -- задача разделения набора данных на однородные группы таким образом, чтобы объекты внутри одного кластера были максимально схожи между собой, а объекты из разных кластеров -- максимально различны.
+        \item \textit{Снижение размерности} -- задача уменьшения объема данных за счет выделения ключевой информации.
         \item \textit{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
-        \item \textit{Генеративные модели} -- задача создания новых объектов на основе некоторых входных данных задающих параметры выходного объекта.
+        \item \textit{Генеративные модели} -- задача создания новых объектов на основе некоторых входных данных, задающих параметры выходного объекта.
         \item \textit{Извлечение признаков} -- задача автоматического преобразования исходных данных в компактное и информативное векторое представление, пригодное для решения downstream задач.
     \end{itemize}
     \par Основные преимущества обучения без учителя:
     \begin{itemize}
         \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс их сбора.
-        \item \textit{Универсальность} -- применимо к большему классу задач, по скольку для обучения требуется лишь мера качества предсказания, которая может быть основанна на чем угодно а не только на ответах.
+        \item \textit{Универсальность} -- применимо к большему классу задач, поскольку для обучения требуется лишь мера качества предсказания, которая может быть основанна на чем угодно, а не только на ответах.
     \end{itemize}
     \par Основные недостатки обучения без учителя:
     \begin{itemize}
         \item \textit{Сложность оценки качества} -- отсутствие разметки требует построеия не менее эффективной и объективной функции оценки качества предсказания.
-        \item \textit{Проблема интерпретируемости} -- во многих задачах обучения без учителя предсказываемые моделью значения сложно интерпретируемы человеку за счет того что оно опирается на некоторые функции, а не ответ человека.
+        \item \textit{Проблема интерпретируемости} -- во многих задачах обучения без учителя предсказываемые моделью значения сложно интерпретируемы человеку за счет того, что оно опирается на некоторые функции, а не ответ человека.
     \end{itemize}
-    \par К моделям обучаеммым данным методом можно отнести:
+    \par К моделям, обучаемым данным методом, можно отнести такие как:
     \begin{itemize}
         \item KMeans\cite{kmeans}
         \item DBSCAN\cite{dbscan_book}
