--- a/subfiles/part_2/requierments.tex
+++ b/subfiles/part_2/requierments.tex
@@ -5,7 +5,7 @@
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
     \item Графический процессор (GPU) с высокой производительностью и тензорными ядрами. Рекомендуется использовать графический процессор Nvidia не менее чем с 16 ГБ видеопамяти. Меньший объем памяти может существенно увеличить необходимое время для обучения модели.
-    \item Хранилище данных которое обеспечит высокую скорость доступа к файлам. Рекомендуется использовать SSD.
+    \item Хранилище данных, которое обеспечит высокую скорость доступа к файлам. Рекомендуется использовать SSD.
     \item Оперативная память для хранения датасета. Рекомендуется 16 ГБ.
 \end{enumerate}
 \par Большая скорость обучения модели может быть достигнута за счет использования большего количества графических процессоров.
@@ -13,7 +13,7 @@
 % #TODO ССыЛКИ
 \par Для обучения нейронной сети требуется:
 \begin{enumerate}
-    \item Операционная система на базе Linux, или любая другая поддерживающая все используемые библиотеки.
+    \item Операционная система на базе Linux или любая другая, поддерживающая все используемые библиотеки.
     \item Язык программирования Python 3.11 или выше.
     \item Библиотека глубокого обучения PyTorch.
     \item Библиотека машинного обучения Scikit Learn.
