--- a/subfiles/part_3/training.tex
+++ b/subfiles/part_3/training.tex
@@ -6,7 +6,7 @@
 \subsubsection{Архитектура проекта}
 \par Проект состоит из следующих файлов:
 \begin{itemize}
-    \item main.py -- основной файл который запускает процесс обучения
+    \item main.py -- основной файл, который запускает процесс обучения
     \item eval\_batch.ipynb -- необходим для запуска обученной модели
     \item transformer.py -- файл с описанием структуры архитектуры модели 
     \item dataset.py -- файл с реализацией класса датасета
@@ -14,14 +14,14 @@
     \item augentations.py -- файл с аугментациями данных
 \end{itemize}
 \par Здесь для вызова обучения необходимо запустить файл main\_dino.py, с необходимыми аргументами.
-\par Перечень основных аргументов
+\par Перечень основных аргументов:
 \begin{itemize}
     \item arch -- название архитектуры, которая будет использована для создания модели, изначально выбран t\_tiny.
     \item token\_slicer -- метод по отделения участков. Изначально стоит Tokens -- разделение на участки по токенам.
     \item max\_token\_count -- максимальное число токенов, в использованном токенизаторе это значение равняется 65536.
     \item out\_dim -- размерность пространства выхода Dino head. Изначально равно 65000.
     \item use\_fp16 -- использовать ли float 16 во время обучения или нет. Изначально флаг равен Истине.
-    \item batch\_size\_per\_gpu -- количество примеров которые будут загружены на одной видеокарте. Изначально стоит 16.
+    \item batch\_size\_per\_gpu -- количество примеров, которые будут загружены на одной видеокарте. Изначально стоит 16.
     \item epochs -- количество эпох обучения. Изначально равно 100.
     \item local\_crops\_number -- количество локальных участков на одно наблюдение. Изначально равно 8.
 \end{itemize}
