--- a/subfiles/result.tex
+++ b/subfiles/result.tex
@@ -2,9 +2,9 @@
 
 \begin{document}
 \section{Заключение}
-\par В данной работе было исследовано извлечение признакового представления исходного кода с использованием методов обучения без учителя для последующего применения в downstream-задачах. Основной фокус был направлен на адаптацию подхода \acrshort{dino} для обработки программного кода, что привело к созданию модели Dino.
-\par Несмотря на значительно меньший объем тренировочных данных по сравнению с CodeBERT, модель Dino продемонстрировала близкое качество в задачах классификации кода.
-\par Если \acrshort{mlm} ориентированы на предсказание конкретных токенов, то \acrshort{dino} фокусируется на извлечении обобщённых признаковых представлений данных, что делает его более предпочтительным для выбранных задач, так как модель Dino учится извлекать признаки инвариантные к аугментациям.
+\par В данной работе было исследовано извлечение признакового представления исходного кода с использованием методов обучения без учителя для последующего применения в downstream-задачах. Основной фокус был направлен на адаптацию подхода \acrshort{dino} для обработки программного кода, что привело к созданию модели \acrshort{dino}.
+\par Несмотря на значительно меньший объем тренировочных данных по сравнению с CodeBERT, модель \acrshort{dino} продемонстрировала близкое качество в задачах классификации кода.
+\par Если \acrshort{mlm} ориентированы на предсказание конкретных токенов, то \acrshort{dino} фокусируется на извлечении обобщённых признаковых представлений данных, что делает его более предпочтительным для выбранных задач, так как модель \acrshort{dino} учится извлекать признаки инвариантные к аугментациям.
 \par Для улучшения стоит произвести обучение с большим количеством тренировочных данных и вычислительных блоков.
-\par Модель Dino подтвердила свою жизнеспособность как альтернатива feature extraction моделям. Хотя она и не превосходит CodeBERT в абсолютных метриках, ее эффективность при малых данных открывает новые возможности для внедрения ИИ в разработку ПО.
+\par Модель \acrshort{dino} подтвердила свою жизнеспособность как альтернатива feature extraction моделям. Хотя она и не превосходит CodeBERT в абсолютных метриках, ее эффективность при малых данных открывает новые возможности для внедрения ИИ в разработку ПО.
 \end{document}
