--- a/subfiles/part_1/codebert.tex
+++ b/subfiles/part_1/codebert.tex
@@ -8,7 +8,7 @@
 
 \subsubsection{Маскированное языковое моделирование}
 \par \acrfull{mlm} -- это ключевая задача предобучения в современных языковых моделях, где модель учится предсказывать специально замаскированные токены в исходном тексте или коде на основе контекста. Этот подход позволяет нейросетям глубоко усваивать синтаксические и семантические зависимости в данных.
-\par Задача \acrshort{mlm} обладает существенными ограничениями в формировании целостного понимания текста, по скольку фокусируется исключительно на локальном востановлении маскированных токенов в ограниченном контексте, игнорируя глобальную структуру и логические связи между предложениями.
+\par Задача \acrshort{mlm} обладает существенными ограничениями в формировании целостного понимания текста, поскольку фокусируется исключительно на локальном восстановлении маскированных токенов в ограниченном контексте, игнорируя глобальную структуру и логические связи между предложениями.
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{MLM.png}
@@ -21,11 +21,11 @@
     \item Предсказание -- модель анализирует контекст вокруг маски и вычисляет вероятность токенов кандидатов.
     \item Функция потерь -- ошибка считается только для замаскированных позиций.
 \end{enumerate}
-\par Основными приемуществами использования \acrshort{mlm} являются:
+\par Основными преимуществами использования \acrshort{mlm} являются:
 \begin{itemize}
     \item Контекстное обучение -- модель учится находить взаимосвязи токенов, а не только статистику.
-    \item Универасальность -- подходит для любых последовательностей, не требуя разметку.
-    \item Подготовка к downstream-задачам -- навык востановления контекста полезно для автопродления текста или же исправления ошибок.
+    \item Универсальность -- подходит для любых последовательностей, не требуя разметку.
+    \item Подготовка к downstream-задачам -- навык восстановления контекста полезен для автопродления текста или же исправления ошибок.
 \end{itemize}
 
 \subsubsection{Обнаружения заменённых токенов}
@@ -41,13 +41,13 @@
 \par На рисунке \ref{fig:rtd_bert} изображен классический процесс обучения модели на задаче обнаружения заменённых токенов. Обучение происходит в 3 шага:
 \begin{enumerate}
     \item Замена токенов -- маленькая модель генератора заменяет токены на новые, схожие по смыслу. К примеру running заменится на jogging 
-    \item Предсказание -- модель анализирует контекст вокруг замены выявить является ли токен замененным.
+    \item Предсказание -- модель анализирует текст и для каждого элемента делает предсказание, является ли он замененным.
     \item Функция потерь -- ошибка считается для замененных токенов и оригинальных.
 \end{enumerate}
-\par Основными приемуществами использования \acrshort{rtd} являются:
+\par Основными преимуществами использования \acrshort{rtd} являются:
 \begin{itemize}
     \item Углубленное моделирование зависимостей текста -- за счет детекции некорректных токенов подстановок, что усиливает контекстуальное понимание лингвистических паттернов.
-    \item Качество представлений -- превосходит MLM при равных ресурсах (например, ELECTRA\cite{clark2020electrapretrainingtextencoders} показывает результат схожий с моделью RoBERTa\cite{liu2019robertarobustlyoptimizedbert}, однако использую в 4 раза меньше вычислений).
+    \item Качество представлений -- превосходит MLM при равных ресурсах (например, ELECTRA\cite{clark2020electrapretrainingtextencoders} показывает результат схожий с моделью RoBERTa\cite{liu2019robertarobustlyoptimizedbert}, однако используя в 4 раза меньше вычислений).
 \end{itemize}
 
 \end{document}
