--- a/subfiles/part_1/deep_learning.tex
+++ b/subfiles/part_1/deep_learning.tex
@@ -2,20 +2,20 @@
 
 \begin{document}
 \subsection{Глубокое обучение}
-\par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Свое назавние получили из-за попытки их построения на основе структуры нейронных сетей млекопетающих, и состоит из нейронных слоев, каждый из которых поочередно активируется.
+\par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Свое название \acrshort{nn} получили из-за попытки их построения на основе структуры нейронных сетей млекопитающих и состоят из нейронных слоев, каждый из которых поочередно активируется.
 \par Нейронные сети состоят из взаимосвязанных слоев искусственных нейронов, которые обрабатывают входные данные через последовательность линейных преобразований и нелинейных функций активации. Каждый нейрон имеет настраиваемые параметры: веса и смещения, которые подбираются в процессе обучения для минимизации ошибки предсказания. 
-\par Такакя архтектура позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений начальные слои определяют базовые признаки, такие как перепады света, простые геометрические фигуры. Второй слой используя уже обработанные данные определяет типы объектов на изображении. Таким образом модель может построить цепь признаков, получаемых друг из друга которые помогают решить задачу с высокой точностью.
+\par Такая архитектура позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений начальные слои определяют базовые признаки, такие как перепады света, простые геометрические фигуры. Второй слой, используя уже обработанные данные, определяет типы объектов на изображении. Таким образом модель может построить цепь признаков, получаемых друг из друга, которые помогают решить задачу с высокой точностью.
 \par К сожалению, у нейронных сетей есть и недостатки:
 \begin{itemize}
     \item \textit{Сложность интерпретации} -- Признаки, извлекаемые моделью, представляют собой абстрактные числовые паттерны, работающие по принципу "чёрного ящика" - их внутренняя логика не поддаётся содержательной интерпретации, что исключает возможность объяснения причин конкретных предсказаний и не гарантирует устойчивой работы на новых данных
     \item \textit{Вычислительная сложность} -- Некоторые методы машинного обучения, особенно глубокие нейронные сети с миллионами параметров и алгоритмы обработки больших данных, требуют значительных вычислительных ресурсов и продолжительное время обучения, что ограничивает их применение в условиях ограниченных аппаратных возможностей.
 \end{itemize}
 \par В настоящее время глубокое обучение стало неотъемлемой частью нашей жизни. Благодаря ему работают голосовые помощники, системы рекомендаций и системы распознавания лиц.
-\par Основные направления в которых применяют глубокое обучение:
+\par Основные направления, в которых применяют глубокое обучение:
 \begin{itemize}
     \item \textit{Компьютерное зрение} -- Детекция объектов, классификация и генерация изображений.
     \item \textit{Обработка естественного языка} -- Машинный перевод, языковое моделирование, LLM.
     \item \textit{Обучение с подкреплением} -- Робототехника, Игровые AI, LLM.
 \end{itemize}
-\par Обучение нейронных сетей осуществляется методов градиентного спуска, которые итеративно корректируют параметры модели в направлении антиградента функции потерь. Ключевое требования для такой оптимизации -- дифференцируемость всех компонентов сети, чтобы можно было вычислить градиенты с помощью алгоритма обратного распространения ошибки. 
+\par Обучение нейронных сетей осуществляется методами градиентного спуска, которые итеративно корректируют параметры модели в направлении антиградента функции потерь. Ключевое требования для такой оптимизации -- дифференцируемость всех компонентов сети, чтобы можно было вычислить градиенты с помощью алгоритма обратного распространения ошибки. 
 \end{document}
